--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  font-family: sans-serif;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  flex-direction: column;
+  height: 100vh;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman",
+  serif;
+  background-color: #f8f9fd;
   }
-  to {
-    transform: rotate(360deg);
+  .login-form {
+  background-color: white;
+  padding: 2rem;
   }
-}
+  input[type="text"],
+  input[type="password"] {
+  height: 25px;
+  width: 250px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  input[type="submit"] {
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 15px;
+  background: #01d28e;
+  border: 1px solid #01d28e;
+  color: #fff;
+  padding: 10px 20px;
+  }
+  input[type="submit"]:hover {
+  background: #6cf0c2;
+  }
+  .button-container {
+  display: flex;
+  justify-content: center;
+  }
+  .list-container {
+    display: flex;
+    }
+    .error {
+    color: red;
+    font-size: 15px;
+    }
+    .title {
+    font-size: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+    }
+    .input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin: 10px;
+    }
